fixed poster stretching issue

--- a/src/index.css
+++ b/src/index.css
@@ -26,10 +26,7 @@ html {
 }
 
 body {
-  font-family:
-    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
-    Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-
+  font-family: "Inter", sans-serif;
   color: var(--color-text);
   background-color: var(--color-background-900);
   padding: 2.4rem;
@@ -404,6 +401,8 @@ body {
 
 .details header {
   display: flex;
+  background-color: var(--color-background-100);
+  align-items: flex-start;
 }
 
 .details section {
@@ -414,13 +413,14 @@ body {
 }
 
 .details img {
+  aspect-ratio: 2 / 3;
+  object-fit: cover;
   width: 33%;
 }
 
 .details-overview {
   width: 100%;
   padding: 2.4rem 3rem;
-  background-color: var(--color-background-100);
   display: flex;
   flex-direction: column;
   gap: 1.4rem;
@@ -446,7 +446,7 @@ body {
   }
 
   .details-overview p {
-    font-size: 3vw;
+    font-size: 2rem;
   }
 }
 
